[metadata]
name = geolib
version = 0.0.1
description = Calculate distances between 2 geographical points.
url = https://github.com/FedericoGentile/...
author = Federico Gentile
author_email = federico@gentile.com
license = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = 
	geolib
	geolib.utils
package_dir =
    =src
python_requires = >=3.10
install_requires =
    numpy >= 1.23.5

[options.packages.find]
exclude = test*

[options.extras_require]
dev =
    pytest>=7.1.2
    twine>=4.0.2